#12531 closed bug (fixed)
Haiku no longer detects USB printer (regression)
Reported by: | vidrep | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | Printing | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev49910 x86_gcc2 Epson NX625 printer Printer was configured and working on Haiku, but with recent builds it is no longer detected. Alpha 4.1, which is on another partition, on same hard drive, is still working. So, it not a hardware related problem
Attachments (2)
Change History (14)
comment:1 by , 9 years ago
comment:2 by , 9 years ago
comment:3 by , 9 years ago
Possibly related in this revision range are changes to the launch_daemon. Could it be that the print_server is not running properly?
comment:4 by , 9 years ago
That would be my assumption as well. How exactly does the problem manifest itself? Is the printer always plugged in, but you cannot print to it? Or how exactly does the problem manifest itself? But do you mean by "detection"?
comment:5 by , 9 years ago
The printer is always plugged in, but it cannot now be added from "Preferences->Printers" as before. To illustrate, I have attached a screenshot from Alpha 4.1 and the latest nightly, showing the "Printers" dialog.
by , 9 years ago
Attachment: | screenshot1.png added |
---|
by , 9 years ago
Attachment: | screenshot2.png added |
---|
comment:7 by , 9 years ago
I would bet that the transport popup menu is empty because of this line:
https://cgit.haiku-os.org/haiku/tree/src/preferences/printers/AddPrinterDialog.cpp#n342 https://cgit.haiku-os.org/haiku/tree/src/preferences/printers/Globals.cpp#n40
Which sounds like, indeed, we fail to start print_server.
comment:9 by , 9 years ago
Milestone: | Unscheduled → R1/beta1 |
---|---|
Owner: | changed from | to
Status: | new → in-progress |
comment:11 by , 9 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Fixed in hrev50005. It's only a workaround, as the actual fix is way more involved -- I'll open a new ticket for that.
comment:12 by , 9 years ago
Tested with hrev50006 x86_gcc2 - working again! Thank you for the "fix". Now I can resume testing the bugs which remain.
I will attempt to go back and find where the regression took place. I'll report back later with the results.