Printers: Workaround for broken print server connection.

* The actual problem is that the launch_daemon does not notice the
  manual launch of system services (because of the missing registrar
  that provides that service).
* So not checking if the print server is running actually solves the
  issue; otherwise the launch_daemon starts its own server, that will
  then get shut down, as there already is a print server (the one
  launched by the Printers preferences).
* Closes ticket #12531.